# callyfy

./: .env.example  .flake8  .gitignore  AGENTS.MD  LICENSE  README.md  pyproject.toml
.cursor/rules/: agents.mdc
src/app/: main.py  run.py
src/app/core/: deps.py  errors.py  exception_handlers.py  settings.py
src/app/db/: __init__.py  database.py
src/app/models/: __init__.py  meeting.py
src/app/routers/v1/: __init__.py  meetings.py
src/app/schemas/: __init__.py  audio.py  base.py  capture.py  meeting.py  search.py  summary.py  transcript.py
src/app/services/: __init__.py  audio.py  scheduler.py  search.py  storage.py  summarization.py  vision.py
